# minimal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  godot_cpp_lib_names.cmake
godot_project/: base_panel.tscn  carbon_car_panel.tscn  icon.png.import  main.tscn  project.godot  red_car_panel.tscn
godot_project/assets/: carbon.jpg.import  red.jpg.import
include/: _extension.hpp  bug.hpp  carbon_car_panel.hpp  red_car_panel.hpp
src/: _extension.cpp  bug.cpp  carbon_car_panel.cpp  red_car_panel.cpp
